--- a/src/client/html/doing.html
+++ b/src/client/html/doing.html
@@ -9,9 +9,8 @@
     <link rel="icon" href="../../favicon.ico">
 
     <title>Starter Template for Bootstrap</title>
+    <link href="../css/style.css" rel="stylesheet">
 
-    <link href="css/style.css" rel="stylesheet">
-    
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -72,5 +71,6 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
     <script src="public/bundle.js" type="text/javascript"></script>
+    <script src="interactive.js" type="text/javascript"></script>
   </body>
 </html>
