add css for bottom nav bar and menu wrapper

--- a/pages/home.html
+++ b/pages/home.html
@@ -18,7 +18,12 @@
 			</div>
 		</div>
 		<div id="content"></div>
-		<div id="footer"></div>
+		<div id="footer">
+			<div id="bottom-nav-bar">
+				<div id="menu-wrapper">
+				</div>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
