add menu items on bottom menu

--- a/pages/home.html
+++ b/pages/home.html
@@ -21,6 +21,11 @@
 		<div id="footer">
 			<div id="bottom-nav-bar">
 				<div id="menu-wrapper">
+					<div class="menu-item">DOING</div>
+					<div class="menu-item">VR STUDIOS</div>
+					<div class="menu-item">THINKING</div>
+					<div class="menu-item">CASE STUDIES</div>
+					<div class="menu-item">INFLUENCERS</div>
 				</div>
 			</div>
 		</div>
