add bottom nav bar circles with colors

--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-	<div id="container">		
+	<div id="container">
+		<div id="background-overlay"></div>	
 		<div id="header">
 			<div id="logo"></div>
 			<div id="right-nav-bar">
@@ -17,15 +18,26 @@
 				</div>
 			</div>
 		</div>
-		<div id="content"></div>
+		<div id="content">
+		</div>
 		<div id="footer">
 			<div id="bottom-nav-bar">
 				<div id="menu-wrapper">
-					<div class="menu-item">DOING</div>
-					<div class="menu-item">VR STUDIOS</div>
-					<div class="menu-item">THINKING</div>
-					<div class="menu-item">CASE STUDIES</div>
-					<div class="menu-item">INFLUENCERS</div>
+					<div id=blue class="menu-item">
+						<div class="bottom-nav-titles">DOING</div>
+					</div>
+					<div id="pink" class="menu-item">
+						<div class="bottom-nav-titles">VR STUDIOS</div>
+					</div>
+					<div id="yellow" class="menu-item">
+						<div class="bottom-nav-titles">THINKING</div>
+					</div>
+					<div id="white" class="menu-item">
+						<div class="bottom-nav-titles">CASE STUDIES</div>
+					</div>
+					<div id="black" class="menu-item">
+						<div class="bottom-nav-titles">INFLUENCERS</div>
+					</div>
 				</div>
 			</div>
 		</div>
