add footer for production page icons

--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-	<div id="container">
+	<div id="container" class="home-page">
 		<div id="background-overlay"></div>	
 		<div id="header">
 			<div id="logo"></div>
@@ -23,7 +23,7 @@
 		<div id="footer">
 			<div id="bottom-nav-bar">
 				<div id="menu-wrapper">
-					<div id=blue class="menu-item">
+					<div id="blue" class="menu-item">
 						<div class="bottom-nav-titles">DOING</div>
 					</div>
 					<div id="pink" class="menu-item">
