--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -8,9 +8,9 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Tag</title>
+    <title>Starter Template for Bootstrap</title>
 
-    <link href="../style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     
     <!-- Bootstrap core CSS -->
     <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -33,53 +33,41 @@
   </head>
 
   <body>
-    <div id="container" class="production-page">
-      <div id="background-overlay"></div>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Project name</a>
-          </div>
-          <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-              <li><a href="#what">What</a></li>
-              <li><a href="#who">Who</a></li>
-              <li><a href="#how">How</a></li>
-              <li><a href="#store">Store</a></li>
-              <li><a href="#contact">Contact Us</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </nav>
+
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
-        <div id="description-doing" />
-      </div><!-- /.container -->
-      <div class="container">
-        <div id="videos"></div>
-      </div>
-      <div id="footer-production">
-        <div id="bottom-nav-bar">
-          <div id="menu-wrapper">
-            <div class="menu-item">
-              <div class="bottom-nav-titles">FB APPS</div>
-            </div>
-            <div class="menu-item">
-              <div class="bottom-nav-titles">APP</div>
-            </div>
-            <div class="menu-item">
-              <div class="bottom-nav-titles">AD</div>
-            </div>
-            <div class="menu-item">
-              <div class="bottom-nav-titles">HOME</div>
-            </div>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Project name</a>
         </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="#what">What</a></li>
+            <li><a href="#who">Who</a></li>
+            <li><a href="#how">How</a></li>
+            <li><a href="#store">Store</a></li>
+            <li><a href="#contact">Contact Us</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
+    </nav>
+
+    <div class="container">
+      <div id="description-doing" />
+    </div><!-- /.container -->
+    <div class="container">
+      <div id="videos"></div>
+    </div>
+    <div id="button-text">
+      <span type="text">FB APPS</span>
+      <span type="text">APP</span>
+      <span type="text">AD</span>
+      <span type="text">HOME</span>
     </div>
 
 
