--- a/pages/home.html
+++ b/pages/home.html
@@ -5,10 +5,10 @@
 	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-	<div id="container">
+	<div id="index-container">
 		<div id="background-overlay"></div>	
 		<div id="header">
-			<div id="logo"></div>
+			<div class="logo"></div>
 			<div id="right-nav-bar">
 				<div id="menu-wrapper">
 					<div class="menu-item">WHO</div>
@@ -18,7 +18,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="content">
+		<div class="content">
 		</div>
 		<div id="footer">
 			<div id="bottom-nav-bar">
