change scss code pracitses

--- a/pages/work.html
+++ b/pages/work.html
@@ -18,10 +18,8 @@
 			</div>
 		</div>
 		<div class="content">
-			<div class="four-grid"></div>
-			<div class="four-grid"></div>
-			<div class="four-grid"></div>
-			<div class="four-grid"></div>
+			<div id="left-text-container"></div>
+			<div class="right-video-container"></div>
 		</div>
 		<div id="footer">
 		</div>
