--- a/pages/work.html
+++ b/pages/work.html
@@ -17,9 +17,13 @@
 				</div>
 			</div>
 		</div>
-		<div class="content">
-			<div id="left-text-container"></div>
-			<div class="right-video-container"></div>
+		<div id="work-content" class="content">
+			<div id="left-text-container">
+				<div id="left-text-wrapper"></div>
+			</div>
+			<div id="right-media-container">
+				<div id="right-media-wrapper"></div>
+			</div>
 		</div>
 		<div id="footer">
 		</div>
