add border box sizing to content class so content doesnt go over footer

--- a/pages/work.html
+++ b/pages/work.html
@@ -22,7 +22,14 @@
 				<div id="left-text-wrapper"></div>
 			</div>
 			<div id="right-media-container">
-				<div id="right-media-wrapper"></div>
+				<div id="right-media-wrapper">
+					<div class="video-media-wrapper"></div>
+					<div class="video-media-wrapper"></div>
+					<div class="video-media-wrapper"></div>
+					<div class="video-media-wrapper"></div>
+					<div class="video-media-wrapper"></div>
+					<div class="video-media-wrapper"></div>
+				</div>
 			</div>
 		</div>
 		<div id="footer">
