add bottom color bars on video containers

--- a/pages/work.html
+++ b/pages/work.html
@@ -23,12 +23,42 @@
 			</div>
 			<div id="right-media-container">
 				<div id="right-media-wrapper">
-					<div class="video-media-wrapper"></div>
-					<div class="video-media-wrapper"></div>
-					<div class="video-media-wrapper"></div>
-					<div class="video-media-wrapper"></div>
-					<div class="video-media-wrapper"></div>
-					<div class="video-media-wrapper"></div>
+					<div class="video-media-wrapper">
+						<div class="video-media-bottom">
+							<div class="video-media-bottom-color-bars"></div>
+							<div class="video-media-bottom-color-bars"></div>
+						</div>
+					</div>
+					<div class="video-media-wrapper">
+						<div class="video-media-bottom">
+							<div class="video-media-bottom-color-bars"></div>
+							<div class="video-media-bottom-color-bars"></div>
+						</div>
+					</div>
+					<div class="video-media-wrapper">
+						<div class="video-media-bottom">
+							<div class="video-media-bottom-color-bars"></div>
+							<div class="video-media-bottom-color-bars"></div>
+						</div>
+					</div>
+					<div class="video-media-wrapper">
+						<div class="video-media-bottom">
+							<div class="video-media-bottom-color-bars"></div>
+							<div class="video-media-bottom-color-bars"></div>
+						</div>
+					</div>
+					<div class="video-media-wrapper">
+						<div class="video-media-bottom">
+							<div class="video-media-bottom-color-bars pink"></div>
+							<div class="video-media-bottom-color-bars pink"></div>
+						</div>
+					</div>
+					<div class="video-media-wrapper">
+						<div class="video-media-bottom">
+							<div class="video-media-bottom-color-bars pink"></div>
+							<div class="video-media-bottom-color-bars"></div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
