--- a/pages/work.html
+++ b/pages/work.html
@@ -59,6 +59,10 @@
 							<div class="video-media-bottom-color-bars"></div>
 						</div>
 					</div>
+					<div id="video-media-nav">
+						<div class="arrow"><</div>
+						<div class="arrow">></div>
+					</div>
 				</div>
 			</div>
 		</div>
