move icons inside div

--- a/pages/home.html
+++ b/pages/home.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 <body>
-	<div id="container" class="home-page">
+	<div id="index-container">
 		<div id="background-overlay"></div>	
 		<div id="header">
 			<div id="logo"></div>
