--- a/pages/production.html
+++ b/pages/production.html
@@ -11,7 +11,7 @@
     <link href="../style.css" rel="stylesheet">
   </head>
   <body>
-    <div id="container" class="production-page">
+    <div id="production-container">
     <div id="background-overlay"></div> 
     <div id="header">
       <div id="logo"></div>
@@ -25,24 +25,26 @@
       </div>
     </div>
     <div id="content">
+   		<div id="footer-production">
+	        <div id="bottom-nav-bar">
+		        <div id="menu-wrapper">
+		            <div class="menu-item">
+		              <div class="bottom-nav-titles">FB APPS</div>
+		            </div>
+		            <div class="menu-item">
+		              <div class="bottom-nav-titles">APP</div>
+		            </div>
+		            <div class="menu-item">
+		              <div class="bottom-nav-titles">AD</div>
+		            </div>
+		            <div class="menu-item">
+		              <div class="bottom-nav-titles">HOME</div>
+		            </div>
+		        </div>
+	        </div>
+	    </div>
     </div>
-      <div id="footer-production">
-        <div id="bottom-nav-bar">
-          <div id="menu-wrapper">
-            <div class="menu-item">
-              <div class="bottom-nav-titles">FB APPS</div>
-            </div>
-            <div class="menu-item">
-              <div class="bottom-nav-titles">APP</div>
-            </div>
-            <div class="menu-item">
-              <div class="bottom-nav-titles">AD</div>
-            </div>
-            <div class="menu-item">
-              <div class="bottom-nav-titles">HOME</div>
-            </div>
-        </div>
-      </div>
+      
     </div>
     <script src="../public/bundle.js" type="text/javascript"></script>
   </body>
