--- a/pages/vr.html
+++ b/pages/vr.html
@@ -8,7 +8,7 @@
     <link href="../style.css" rel="stylesheet">
   </head>
   <body>
-   <div id="container" class="vr-page">
+   <div id="vr-container">
     <div id="background-overlay"></div> 
     <div id="header">
       <div id="logo"></div>
@@ -30,7 +30,8 @@
         <p>Get in touch today; we’d love to help bring your brand to life, truly, from virtual to the real world!</p>
         <p>Download our VR Studios app to get the very best Virtual Reality experience. We’ll keep the content coming with more immersive virtual reality footage from throughout New Zealand and beyond.</p>
       </div>
-    </div>
+      <div id="test">
+      </div>
       <div id="footer-production">
         <div id="bottom-nav-bar">
           <div id="menu-wrapper">
@@ -43,6 +44,7 @@
             <div class="menu-item">
               <div class="bottom-nav-titles">HOME</div>
             </div>
+          </div>
         </div>
       </div>
     </div>
