add text and new footer size

--- a/pages/home.html
+++ b/pages/home.html
@@ -20,7 +20,7 @@
 		</div>
 		<div class="content">
 		</div>
-		<div id="footer">
+		<div id="homepage-footer">
 			<div id="bottom-nav-bar">
 				<div id="menu-wrapper">
 					<div id=blue class="menu-item">
