--- a/pages/work.html
+++ b/pages/work.html
@@ -19,7 +19,13 @@
 		</div>
 		<div id="work-content" class="content">
 			<div id="left-text-container">
-				<div id="left-text-wrapper"></div>
+				<div id="left-text-wrapper">
+					<h1>Our work</h1>
+					<p>How do we do what we do? What have we done?</p>
+					<p>Simple. We work with you and your brand to develop campaigns and content that inspires your brand and community. From fun and fantastic to the buisiness of business. TAG The Agency can create campaigns and content that hits the mark!</p>
+					<p>Need a little help with your advertising? Need it to win in social media? Not sure if your brand could play in this space? TAG us in; we'd love to play!</p>
+					<h2>Wanna play?!</h2>
+				</div>
 			</div>
 			<div id="right-media-container">
 				<div id="right-media-wrapper">
