add filter and z-index

--- a/pages/production.html
+++ b/pages/production.html
@@ -25,7 +25,12 @@
       </div>
     </div>
     <div id="content">
-   		<div id="footer-production">
+    	<div>
+    		<div id="text-column">
+	    		<p id="description-header">Doing</p>
+	    		<p>We will assist you in the development of strategic social media content and Facebook apps all the way through to video production for YouTube. TAG The Agency has the in-house skills, technology and ability to deliver the very best solutions for your audience.</p>
+    		</div>
+   		<div id="icon-bar">
 	        <div id="bottom-nav-bar">
 		        <div id="menu-wrapper">
 		            <div class="menu-item">
