--- a/pages/vr.html
+++ b/pages/vr.html
@@ -22,28 +22,25 @@
       </div>
     </div>
     <div id="content">
-      <div id="vr-text-column">
-        <p>Virtual Reality Studios</p>
+      <div id="text-column">
+        <p id="description-header">Virtual Reality Studios</p>
         <p>Welcome to VR Studios. This is a specific division of TAG that has been established to bring marketing and advertising to life through Virtual Reality.</p>
         <p>Video examples<br />360 Photo examples</p>
         <p>We have all of the bases covered. We can work with you to produce mind blowing 360 video content, develop and supply custom branded VR Goggles and create and build a VR smart phone app for your content.</p>
         <p>Get in touch today; we’d love to help bring your brand to life, truly, from virtual to the real world!</p>
         <p>Download our VR Studios app to get the very best Virtual Reality experience. We’ll keep the content coming with more immersive virtual reality footage from throughout New Zealand and beyond.</p>
       </div>
-      <div id="test">
-      </div>
-      <div id="footer-production">
-        <div id="bottom-nav-bar">
-          <div id="menu-wrapper">
-            <div class="menu-item">
-              <div class="bottom-nav-titles">APP</div>
-            </div>
-            <div class="menu-item">
-              <div class="bottom-nav-titles">GOGGLES</div>
-            </div>
-            <div class="menu-item">
-              <div class="bottom-nav-titles">HOME</div>
-            </div>
+    <div id="icon-bar">
+      <div id="bottom-nav-bar">
+        <div id="menu-wrapper">
+          <div class="menu-item">
+            <div class="bottom-nav-titles">APP</div>
+          </div>
+          <div class="menu-item">
+            <div class="bottom-nav-titles">GOGGLES</div>
+          </div>
+          <div class="menu-item">
+            <div class="bottom-nav-titles">HOME</div>
           </div>
         </div>
       </div>
