add responsive styling for head (color chaning depending on device)

--- a/pages/home.html
+++ b/pages/home.html
@@ -29,7 +29,7 @@
 					<div id="pink" class="menu-item">
 						<div class="bottom-nav-titles">VR STUDIOS</div>
 					</div>
-					<div id="yellow" class="menu-item">
+					<div id="yellow" clamkdir ss="menu-item">
 						<div class="bottom-nav-titles">THINKING</div>
 					</div>
 					<div id="white" class="menu-item">
