--- a/pages/work-refactor.html
+++ b/pages/work-refactor.html
@@ -7,13 +7,13 @@
 <body>
 	<header>
 		<div class="nav-top nav-top--dark">
-			<div class="nav-top__menu">
-				<div class="nav-top__menu-item">Who</div>
-				<div class="nav-top__menu-item nav-top__menu-item--current">What</div>
-				<div class="nav-top__menu-item">How</div>
-				<div class="nav-top__menu-item">Store</div>
-				<div class="nav-top__menu-item">Contact Us</div>
-			</div>
+			<ul class="nav-top__menu">
+				<li class="nav-top__menu-item">Who</li>
+				<li class="nav-top__menu-item nav-top__menu-item--current">What</li>
+				<li class="nav-top__menu-item">How</li>
+				<li class="nav-top__menu-item">Store</li>
+				<li class="nav-top__menu-item">Contact Us</li>
+			</ul>
 			<div class="nav-top__logo nav-top__logo--dark"></div>
 		</div>
 	</header>
