--- a/pages/production.html
+++ b/pages/production.html
@@ -30,23 +30,23 @@
 	    		<p id="description-header">Doing</p>
 	    		<p>We will assist you in the development of strategic social media content and Facebook apps all the way through to video production for YouTube. TAG The Agency has the in-house skills, technology and ability to deliver the very best solutions for your audience.</p>
     		</div>
-   		<div id="icon-bar">
-	        <div id="bottom-nav-bar">
-		        <div id="menu-wrapper">
-		            <div class="menu-item">
-		              <div class="bottom-nav-titles">FB APPS</div>
-		            </div>
-		            <div class="menu-item">
-		              <div class="bottom-nav-titles">APP</div>
-		            </div>
-		            <div class="menu-item">
-		              <div class="bottom-nav-titles">AD</div>
-		            </div>
-		            <div class="menu-item">
-		              <div class="bottom-nav-titles">HOME</div>
-		            </div>
-		        </div>
+   		<div class="icon-bar">
+        <div class="icon-bar_borders">
+	        <div class="icon-bar_title-wrapper">
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">FB APPS</div>
+            </div>
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">APP</div>
+            </div>
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">AD</div>
+            </div>
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">HOME</div>
+            </div>
 	        </div>
+        </div>
 	    </div>
     </div>
       
