--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -29,17 +29,20 @@
          <p id="description-header">Thinking</p>
          <p>Every game is won but not just through action or ad budgets, but through effective, smart and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
         </div>
-        <div id="icon-bar">
-          <div id="bottom-nav-bar">
-            <div id="menu-wrapper">
-              <div class="menu-item">
-                <div class="bottom-nav-titles">-</div>
+        <div class="icon-bar">
+          <div class="icon-bar_borders">
+            <div class="icon-bar_title-wrapper">
+              <div class="icon-bar_title-item">
+                <div class="icon-bar_title">FB APPS</div>
               </div>
-              <div class="menu-item">
-                <div class="bottom-nav-titles">-</div>
+              <div class="icon-bar_title-item">
+                <div class="icon-bar_title">APP</div>
               </div>
-              <div class="menu-item">
-                <div class="bottom-nav-titles">HOME</div>
+              <div class="icon-bar_title-item">
+                <div class="icon-bar_title">AD</div>
+              </div>
+              <div class="icon-bar_title-item">
+                <div class="icon-bar_title">HOME</div>
               </div>
             </div>
           </div>
