--- a/pages/vr.html
+++ b/pages/vr.html
@@ -30,21 +30,24 @@
         <p>Get in touch today; we’d love to help bring your brand to life, truly, from virtual to the real world!</p>
         <p>Download our VR Studios app to get the very best Virtual Reality experience. We’ll keep the content coming with more immersive virtual reality footage from throughout New Zealand and beyond.</p>
       </div>
-    <div id="icon-bar">
-      <div id="bottom-nav-bar">
-        <div id="menu-wrapper">
-          <div class="menu-item">
-            <div class="bottom-nav-titles">APP</div>
-          </div>
-          <div class="menu-item">
-            <div class="bottom-nav-titles">GOGGLES</div>
-          </div>
-          <div class="menu-item">
-            <div class="bottom-nav-titles">HOME</div>
+      <div class="icon-bar">
+        <div class="icon-bar_borders">
+          <div class="icon-bar_title-wrapper">
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">FB APPS</div>
+            </div>
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">APP</div>
+            </div>
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">AD</div>
+            </div>
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">HOME</div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
     <script src="../public/bundle.js" type="text/javascript"></script>
   </body>
 </html>
