--- a/pages/home.html
+++ b/pages/home.html
@@ -2,45 +2,50 @@
 <html>
 <head>
 	<title>Tag</title>
-	<link rel="stylesheet" type="text/css" href="../style.css">
+	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
 </head>
+<div class="background background--homepage"></div>
 <body>
-	<div id="index-container">
-		<div id="background-overlay"></div>	
-		<div id="header">
-			<div class="logo"></div>
-			<div id="right-nav-bar">
-				<div id="menu-wrapper">
-					<div class="menu-item">WHO</div>
-					<div class="menu-item">WHAT</div>
-					<div class="menu-item">HOW</div>
-					<div class="menu-item">STORE</div>
+	<header>
+		<div class="nav-top nav-top">
+			<ul class="nav-top__menu">
+				<li class="nav-top__menu-item">Who</li>
+				<li class="nav-top__menu-item nav-top__menu-item--current">What</li>
+				<li class="nav-top__menu-item">How</li>
+				<li class="nav-top__menu-item">Store</li>
+				<li class="nav-top__menu-item">Contact Us</li>
+			</ul>
+			<div class="nav-top__logo nav-top__logo--light"></div>
+		</div>
+	</header>
+	<main>
+		<div class="cmyk-crosses">
+			<div class="cmyk-crosses__inner">
+				<div class="cmyk-crosses__item">
+					<div class="cmyk-crosses__image cmyk-crosses__image--blue"></div>
+					<div class="cmyk-crosses__text--blue">Doing</div>
 				</div>
+				<div class="cmyk-crosses__item">
+					<div class="cmyk-crosses__image cmyk-crosses__image--pink"></div>
+					<div class="cmyk-crosses__text--pink">VR Studio</div>
+				</div>
+				<div class="cmyk-crosses__item">
+					<div class="cmyk-crosses__image cmyk-crosses__image--yellow"></div>
+					<div class="cmyk-crosses__text--yellow">Thinking</div>
+				</div>
+				<div class="cmyk-crosses__item">
+					<div class="cmyk-crosses__image cmyk-crosses__image--white"></div>
+					<div class="cmyk-crosses__text--white">Done</div>
+				</div>
+				<div class="cmyk-crosses__item">
+					<div class="cmyk-crosses__image cmyk-crosses__image--black"></div>
+					<div class="cmyk-crosses__text--black">Influencers</div>
+				</div>
+
 			</div>
 		</div>
-		<div class="content">
-		</div>
-		<div id="homepage-footer">
-			<div id="bottom-nav-bar">
-				<div id="menu-wrapper">
-					<div id=blue class="menu-item">
-						<div class="bottom-nav-titles">DOING</div>
-					</div>
-					<div id="pink" class="menu-item">
-						<div class="bottom-nav-titles">VR STUDIOS</div>
-					</div>
-					<div id="yellow" clamkdir ss="menu-item">
-						<div class="bottom-nav-titles">THINKING</div>
-					</div>
-					<div id="white" class="menu-item">
-						<div class="bottom-nav-titles">CASE STUDIES</div>
-					</div>
-					<div id="black" class="menu-item">
-						<div class="bottom-nav-titles">INFLUENCERS</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	</main>
+	<footer>
+	</footer>
 </body>
 </html>
