add flox box mixin and 3 x 2 work examples grid

--- a/pages/home.html
+++ b/pages/home.html
@@ -20,7 +20,7 @@
 	</header>
 	<main>
 		<div class="cmyk-crosses">
-			<div class="cmyk-crosses__inner">
+			<div class="cmyk-crosses__wrapper">
 				<div class="cmyk-crosses__item">
 					<div class="cmyk-crosses__image cmyk-crosses__image--blue"></div>
 					<div class="cmyk-crosses__text--blue">Doing</div>
