--- a/pages/work-refactor.html
+++ b/pages/work-refactor.html
@@ -18,12 +18,62 @@
 		</div>
 	</header>
 	<main>
-<!-- 		<div class="media-card">
-			<div class="media-card__video"></div>
-			<div class="media-card__info-bar"></div>
-			<div class="media-card__color-strip media-card__color-strip--left"></div>
-			<div class="media-card__color-strip media-card__color-strip--right"></div>
-		</div> -->
+		<div class="work-examples">
+			<div class="work-examples__wrapper">
+				<div class="work-examples__row-1">
+					<div class="work-examples__item">
+						<div class="work-examples__category"></div>
+						<div class="work-examples__title"></div>
+						<div class="work-examples__description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+						</div>
+						<div class="work-examples__color-strip"></div>
+					</div>
+					<div class="work-examples__item">
+						<div class="work-examples__category"></div>
+						<div class="work-examples__title"></div>
+						<div class="work-examples__description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+						</div>
+						<div class="work-examples__color-strip"></div>
+					</div>
+					<div class="work-examples__item">
+						<div class="work-examples__category"></div>
+						<div class="work-examples__title"></div>
+						<div class="work-examples__description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+						</div>
+						<div class="work-examples__color-strip"></div>
+					</div>
+				</div>
+				<div class="work-examples__row-2">
+					<div class="work-examples__item">
+						<div class="work-examples__category"></div>
+						<div class="work-examples__title"></div>
+						<div class="work-examples__description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+						</div>
+						<div class="work-examples__color-strip"></div>
+					</div>
+					<div class="work-examples__item">
+						<div class="work-examples__category"></div>
+						<div class="work-examples__title"></div>
+						<div class="work-examples__description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+						</div>
+						<div class="work-examples__color-strip"></div>
+					</div>
+					<div class="work-examples__item">
+						<div class="work-examples__category"></div>
+						<div class="work-examples__title"></div>
+						<div class="work-examples__description">
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+						</div>
+						<div class="work-examples__color-strip"></div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</main>
 	<footer>
 	</footer>
