--- a/pages/work-refactor.html
+++ b/pages/work-refactor.html
@@ -22,26 +22,29 @@
 			<div class="work-examples__wrapper">
 				<div class="work-examples__row-1">
 					<div class="work-examples__item">
-						<div class="work-examples__category"></div>
+						<div class="work-examples__category">Content</div>
 						<div class="work-examples__title"></div>
+						<div class="work-examples__video"></div>
 						<div class="work-examples__description">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 						</div>
 						<div class="work-examples__color-strip"></div>
 					</div>
 					<div class="work-examples__item">
-						<div class="work-examples__category"></div>
+						<div class="work-examples__category">Events</div>
 						<div class="work-examples__title"></div>
+						<div class="work-examples__video"></div>
 						<div class="work-examples__description">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 						</div>
 						<div class="work-examples__color-strip"></div>
 					</div>
 					<div class="work-examples__item">
-						<div class="work-examples__category"></div>
+						<div class="work-examples__category">Campaigns</div>
 						<div class="work-examples__title"></div>
+						<div class="work-examples__video"></div>
 						<div class="work-examples__description">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 						</div>
 						<div class="work-examples__color-strip"></div>
 					</div>
@@ -50,24 +53,27 @@
 					<div class="work-examples__item">
 						<div class="work-examples__category"></div>
 						<div class="work-examples__title"></div>
+						<div class="work-examples__video"></div>
 						<div class="work-examples__description">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 						</div>
 						<div class="work-examples__color-strip"></div>
 					</div>
 					<div class="work-examples__item">
 						<div class="work-examples__category"></div>
 						<div class="work-examples__title"></div>
+						<div class="work-examples__video"></div>
 						<div class="work-examples__description">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 						</div>
 						<div class="work-examples__color-strip"></div>
 					</div>
 					<div class="work-examples__item">
 						<div class="work-examples__category"></div>
 						<div class="work-examples__title"></div>
+						<div class="work-examples__video"></div>
 						<div class="work-examples__description">
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet, vestibulum ex. Nullam eu enim nullam.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 						</div>
 						<div class="work-examples__color-strip"></div>
 					</div>
