--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -1,55 +1,50 @@
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-
     <title>Tag</title>
-    <link href="../style.css" rel="stylesheet">
+    <link href="../stylesheets/style.css" rel="stylesheet">
   </head>
   <body>
-    <div id="strategy-container">
-      <div id="background-overlay"></div> 
-      <div id="header">
-        <div id="logo"></div>
-        <div id="right-nav-bar">
-          <div id="menu-wrapper">
-            <div class="menu-item">WHO</div>
-            <div class="menu-item">WHAT</div>
-            <div class="menu-item">HOW</div>
-            <div class="menu-item">STORE</div>
-          </div>
-        </div>
+    <div class="background background--strategy"></div>
+    <header>
+      <div class="nav-top nav-top">
+        <ul class="nav-top__menu">
+          <li class="nav-top__menu-item">Who</li>
+          <li class="nav-top__menu-item nav-top__menu-item--current">What</li>
+          <li class="nav-top__menu-item">How</li>
+          <li class="nav-top__menu-item">Store</li>
+          <li class="nav-top__menu-item">Contact Us</li>
+        </ul>
+        <div class="nav-top__logo nav-top__logo--light"></div>
       </div>
+    </header>
+    <main>
       <div id="thinking-content">
         <div id="text-column">
          <p id="description-header">Thinking</p>
          <p>Every game is won but not just through action or ad budgets, but through effective, smart and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
         </div>
-        <div class="icon-bar">
-          <div class="icon-bar_borders">
-            <div class="icon-bar_title-wrapper">
-              <div class="icon-bar_title-item">
-                <div class="icon-bar_title">FB APPS</div>
-              </div>
-              <div class="icon-bar_title-item">
-                <div class="icon-bar_title">APP</div>
-              </div>
-              <div class="icon-bar_title-item">
-                <div class="icon-bar_title">AD</div>
-              </div>
-              <div class="icon-bar_title-item">
-                <div class="icon-bar_title">HOME</div>
-              </div>
+      </div>
+      <div class="icon-bar">
+        <div class="icon-bar_borders">
+          <div class="icon-bar_title-wrapper">
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">FB APPS</div>
+            </div>
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">APP</div>
+            </div>
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">AD</div>
+            </div>
+            <div class="icon-bar_title-item">
+              <div class="icon-bar_title">HOME</div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
+    </main>
   <script src="../src/client/public/bundle.js" type="text/javascript"></script>
   </body>
 </html>
