--- a/pages/vr.html
+++ b/pages/vr.html
@@ -1,53 +1,55 @@
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Tag</title>
-    <link href="../style.css" rel="stylesheet">
-  </head>
-  <body>
-   <div id="vr-container">
-    <div id="background-overlay"></div> 
-    <div id="header">
-      <div id="logo"></div>
-      <div id="right-nav-bar">
-        <div id="menu-wrapper">
-          <div class="menu-item">WHO</div>
-          <div class="menu-item">WHAT</div>
-          <div class="menu-item">HOW</div>
-          <div class="menu-item">STORE</div>
+<head>
+  <meta charset="utf-8">
+  <title>Tag</title>
+  <link href="../stylesheets/style.css" rel="stylesheet">
+</head>
+<body>
+  <div class="background background--vr"></div>
+  <div id="vr-container">
+    <header>
+      <div class="nav-top nav-top">
+        <ul class="nav-top__menu">
+          <li class="nav-top__menu-item">Who</li>
+          <li class="nav-top__menu-item nav-top__menu-item--current">What</li>
+          <li class="nav-top__menu-item">How</li>
+          <li class="nav-top__menu-item">Store</li>
+          <li class="nav-top__menu-item">Contact Us</li>
+        </ul>
+        <div class="nav-top__logo nav-top__logo--light"></div>
+      </div>
+    </header>
+    <main>
+      <div id="content">
+        <div id="text-column">
+          <p id="description-header">Virtual Reality Studios</p>
+          <p>Welcome to VR Studios. This is a specific division of TAG that has been established to bring marketing and advertising to life through Virtual Reality.</p>
+          <p>Video examples<br />360 Photo examples</p>
+          <p>We have all of the bases covered. We can work with you to produce mind blowing 360 video content, develop and supply custom branded VR Goggles and create and build a VR smart phone app for your content.</p>
+          <p>Get in touch today; we’d love to help bring your brand to life, truly, from virtual to the real world!</p>
+          <p>Download our VR Studios app to get the very best Virtual Reality experience. We’ll keep the content coming with more immersive virtual reality footage from throughout New Zealand and beyond.</p>
         </div>
-      </div>
-    </div>
-    <div id="content">
-      <div id="text-column">
-        <p id="description-header">Virtual Reality Studios</p>
-        <p>Welcome to VR Studios. This is a specific division of TAG that has been established to bring marketing and advertising to life through Virtual Reality.</p>
-        <p>Video examples<br />360 Photo examples</p>
-        <p>We have all of the bases covered. We can work with you to produce mind blowing 360 video content, develop and supply custom branded VR Goggles and create and build a VR smart phone app for your content.</p>
-        <p>Get in touch today; we’d love to help bring your brand to life, truly, from virtual to the real world!</p>
-        <p>Download our VR Studios app to get the very best Virtual Reality experience. We’ll keep the content coming with more immersive virtual reality footage from throughout New Zealand and beyond.</p>
-      </div>
-      <div class="icon-bar">
-        <div class="icon-bar_borders">
-          <div class="icon-bar_title-wrapper">
-            <div class="icon-bar_title-item">
-              <div class="icon-bar_title">FB APPS</div>
-            </div>
-            <div class="icon-bar_title-item">
-              <div class="icon-bar_title">APP</div>
-            </div>
-            <div class="icon-bar_title-item">
-              <div class="icon-bar_title">AD</div>
-            </div>
-            <div class="icon-bar_title-item">
-              <div class="icon-bar_title">HOME</div>
+        <div class="icon-bar">
+          <div class="icon-bar_borders">
+            <div class="icon-bar_title-wrapper">
+              <div class="icon-bar_title-item">
+                <div class="icon-bar_title">FB APPS</div>
+              </div>
+              <div class="icon-bar_title-item">
+                <div class="icon-bar_title">APP</div>
+              </div>
+              <div class="icon-bar_title-item">
+                <div class="icon-bar_title">AD</div>
+              </div>
+              <div class="icon-bar_title-item">
+                <div class="icon-bar_title">HOME</div>
+              </div>
             </div>
           </div>
         </div>
       </div>
+    </main>
     <script src="../public/bundle.js" type="text/javascript"></script>
   </body>
-</html>
+  </html>
