--- a/pages/work-refactor.html
+++ b/pages/work-refactor.html
@@ -23,7 +23,7 @@
 				<div class="work-examples__row-1">
 					<div class="work-examples__item">
 						<div class="work-examples__category">Content</div>
-						<div class="work-examples__title"></div>
+						<div class="work-examples__title">Content Video</div>
 						<div class="work-examples__video"></div>
 						<div class="work-examples__description">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
@@ -32,7 +32,7 @@
 					</div>
 					<div class="work-examples__item">
 						<div class="work-examples__category">Events</div>
-						<div class="work-examples__title"></div>
+						<div class="work-examples__title">UX NZ</div>
 						<div class="work-examples__video"></div>
 						<div class="work-examples__description">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
@@ -41,7 +41,7 @@
 					</div>
 					<div class="work-examples__item">
 						<div class="work-examples__category">Campaigns</div>
-						<div class="work-examples__title"></div>
+						<div class="work-examples__title">Pepsi Video</div>
 						<div class="work-examples__video"></div>
 						<div class="work-examples__description">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
@@ -66,7 +66,7 @@
 						<div class="work-examples__description">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 						</div>
-						<div class="work-examples__color-strip"></div>
+						<div class="work-examples__color-strip work-examples__color-strip--full-pink"></div>
 					</div>
 					<div class="work-examples__item">
 						<div class="work-examples__category"></div>
@@ -75,7 +75,7 @@
 						<div class="work-examples__description">
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a neque auctor, molestie nisl sit amet.</p>
 						</div>
-						<div class="work-examples__color-strip"></div>
+						<div class="work-examples__color-strip work-examples__color-strip--half-pink"></div>
 					</div>
 				</div>
 			</div>
