--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -26,21 +26,27 @@
          <p>Every game is won but not just through action or ad budgets, but through effective, smart and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
         </div>
       </div>
-      <div class="icon-bar">
-        <div class="icon-bar_borders">
-          <div class="icon-bar_title-wrapper">
-            <div class="icon-bar_title-item">
-              <div class="icon-bar_title">FB APPS</div>
-            </div>
-            <div class="icon-bar_title-item">
-              <div class="icon-bar_title">APP</div>
-            </div>
-            <div class="icon-bar_title-item">
-              <div class="icon-bar_title">AD</div>
-            </div>
-            <div class="icon-bar_title-item">
-              <div class="icon-bar_title">HOME</div>
-            </div>
+      <div class="cmyk-crosses">
+        <div class="cmyk-crosses__inner">
+          <div class="cmyk-crosses__item">
+            <div class="cmyk-crosses__image cmyk-crosses__image--blue"></div>
+            <div class="cmyk-crosses__text--blue">Doing</div>
+          </div>
+          <div class="cmyk-crosses__item">
+            <div class="cmyk-crosses__image cmyk-crosses__image--pink"></div>
+            <div class="cmyk-crosses__text--pink">VR Studio</div>
+          </div>
+          <div class="cmyk-crosses__item">
+            <div class="cmyk-crosses__image cmyk-crosses__image--yellow"></div>
+            <div class="cmyk-crosses__text--yellow">Thinking</div>
+          </div>
+          <div class="cmyk-crosses__item">
+            <div class="cmyk-crosses__image cmyk-crosses__image--white"></div>
+            <div class="cmyk-crosses__text--white">Done</div>
+          </div>
+          <div class="cmyk-crosses__item">
+            <div class="cmyk-crosses__image cmyk-crosses__image--black"></div>
+            <div class="cmyk-crosses__text--black">Influencers</div>
           </div>
         </div>
       </div>
