--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -25,28 +25,22 @@
          <p id="description-header">Thinking</p>
          <p>Every game is won but not just through action or ad budgets, but through effective, smart and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
         </div>
-      </div>
-      <div class="cmyk-crosses">
-        <div class="cmyk-crosses__inner">
-          <div class="cmyk-crosses__item">
-            <div class="cmyk-crosses__image cmyk-crosses__image--blue"></div>
-            <div class="cmyk-crosses__text--blue">Doing</div>
-          </div>
-          <div class="cmyk-crosses__item">
-            <div class="cmyk-crosses__image cmyk-crosses__image--pink"></div>
-            <div class="cmyk-crosses__text--pink">VR Studio</div>
-          </div>
-          <div class="cmyk-crosses__item">
-            <div class="cmyk-crosses__image cmyk-crosses__image--yellow"></div>
-            <div class="cmyk-crosses__text--yellow">Thinking</div>
-          </div>
-          <div class="cmyk-crosses__item">
-            <div class="cmyk-crosses__image cmyk-crosses__image--white"></div>
-            <div class="cmyk-crosses__text--white">Done</div>
-          </div>
-          <div class="cmyk-crosses__item">
-            <div class="cmyk-crosses__image cmyk-crosses__image--black"></div>
-            <div class="cmyk-crosses__text--black">Influencers</div>
+        <div class="icon-bar">
+          <div vlass="icon-bar_borders">
+            <div class="icon-bar__wrapper">
+              <div class="icon-bar__item">
+                <div class="icon-bar__image"></div>
+                <div class="icon-bar__text"></div>
+              </div>
+              <div class="icon-bar__item">
+                <div class="icon-bar__image"></div>
+                <div class="icon-bar__text"></div>
+              </div>
+              <div class="icon-bar__item">
+                <div class="icon-bar__image"></div>
+                <div class="icon-bar__text">Home</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
