add videos tp production page with :after play icons

--- a/pages/work.html
+++ b/pages/work.html
@@ -18,8 +18,8 @@
 		</div>
 	</header>
 	<main>
-		<div class="work-examples">
-			<div class="work-examples__wrapper">
+		<div class="float-right">
+			<div class="work-examples">
 				<div class="work-examples__row-1">
 					<div class="work-examples__item">
 						<div class="work-examples__category">Content</div>
