--- a/pages/production.html
+++ b/pages/production.html
@@ -44,7 +44,7 @@
 				<div class="icons__text">Ads</div>
 			</div>
 			<div class="icons__icon">
-				<div class="icons__image icons__image--home"></div>
+				<div class="icons__image icons__image--home icons__image--home--light"></div>
 				<div class="icons__text">Home</div>
 			</div>
 		</div>
