add new icons to vr page

--- a/pages/vr.html
+++ b/pages/vr.html
@@ -30,22 +30,18 @@
           <p>Get in touch today; we’d love to help bring your brand to life, truly, from virtual to the real world!</p>
           <p>Download our VR Studios app to get the very best Virtual Reality experience. We’ll keep the content coming with more immersive virtual reality footage from throughout New Zealand and beyond.</p>
         </div>
-        <div class="icon-bar">
-          <div class="icon-bar_borders">
-            <div class="icon-bar_title-wrapper">
-              <div class="icon-bar_title-item">
-                <div class="icon-bar_title">FB APPS</div>
-              </div>
-              <div class="icon-bar_title-item">
-                <div class="icon-bar_title">APP</div>
-              </div>
-              <div class="icon-bar_title-item">
-                <div class="icon-bar_title">AD</div>
-              </div>
-              <div class="icon-bar_title-item">
-                <div class="icon-bar_title">HOME</div>
-              </div>
-            </div>
+        <div class="icons icons--light">
+          <div class="icons__icon">
+            <div class="icons__image icons__image"></div>
+            <div class="icons__text">App</div>
+          </div>
+          <div class="icons__icon">
+            <div class="icons__image icons__image"></div>
+            <div class="icons__text">Goggles</div>
+          </div>
+          <div class="icons__icon">
+            <div class="icons__image icons__image--home"></div>
+            <div class="icons__text">Home</div>
           </div>
         </div>
       </div>
