--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -25,6 +25,20 @@
          <p id="description-header">Thinking</p>
          <p>Every game is won but not just through action or ad budgets, but through effective, smart and savvy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
         </div>
+        <div class="icons icons--light">
+          <div class="icons__icon">
+            <div class="icons__image icons__image"></div>
+            <div class="icons__text"></div>
+          </div>
+          <div class="icons__icon">
+            <div class="icons__image icons__image"></div>
+            <div class="icons__text"></div>
+          </div>
+          <div class="icons__icon">
+            <div class="icons__image icons__image--home"></div>
+            <div class="icons__text">Home</div>
+          </div>
+        </div>
       </div>
     </main>
   <script src="../src/client/public/bundle.js" type="text/javascript"></script>
