auto height on content div

--- a/pages/vr.html
+++ b/pages/vr.html
@@ -21,9 +21,14 @@
       </div>
     </header>
     <main>
-      <div id="content">
-        <div id="text-column">
-          <p id="description-header">Virtual Reality Studios</p>
+      <div class="vr-container">
+        <!-- <div class="production-videos">
+          <div class="production-videos__video production-videos__video--full-width"></div>
+          <div class="production-videos__video production-videos__video--half-width"></div>
+          <div class="production-videos__video production-videos__video--half-width"></div>
+        </div> -->
+        <div class="vr-copy copy--light">
+          <h1>Virtual Reality Studios</h1>
           <p>Welcome to VR Studios. This is a specific division of TAG that has been established to bring marketing and advertising to life through Virtual Reality.</p>
           <p>Video examples<br />360 Photo examples</p>
           <p>We have all of the bases covered. We can work with you to produce mind blowing 360 video content, develop and supply custom branded VR Goggles and create and build a VR smart phone app for your content.</p>
