add set width page wireframe

--- a/pages/strategy.html
+++ b/pages/strategy.html
@@ -18,7 +18,28 @@
 			<div class="nav-top__logo nav-top__logo--light"></div>
 		</div>
 	</header>
-	<main></main>
+	<main>
+		<div class="thinking-background"></div>
+		<div class="float-right"></div>
+		<div class="copy">
+			<h1>Thinking</h1>
+			<p>Every game is won but not just through action or ad budgets, but through effective, smart, and savy strategy. In the modern world, advertising strategies must be fluid and adaptable; moving with the media, following the audience, and keeping focus on them and the channels that they play in.</p>
+		</div>
+		<div class="icons icons">
+			<div class="icons__icon">
+				<div class="icons__image icons__image"></div>
+				<div class="icons__text">Icon 1</div>
+			</div>
+			<div class="icons__icon">
+				<div class="icons__image icons__image"></div>
+				<div class="icons__text">Icon 2</div>
+			</div>
+			<div class="icons__icon">
+				<div class="icons__image icons__image--home"></div>
+				<div class="icons__text">Home</div>
+			</div>
+		</div>
+	</main>
 	<footer></footer>
 </body>
 </html>
