--- a/pages/work.html
+++ b/pages/work.html
@@ -18,7 +18,12 @@
 		</div>
 	</header>
 	<main>
-		<div class="float-right">
+		<div class="inner-container">
+			<div class="copy"></div>
+			<div class="icons"></div>
+			<div class="media"></div>
+		</div>
+		<!-- <div class="float-right">
 			<div class="work-examples">
 				<div class="work-examples__row-1">
 					<div class="work-examples__item">
@@ -92,9 +97,7 @@
 				<div class="icons__image icons__image--home"></div>
 				<div class="icons__text">Home</div>
 			</div>
-		</div>
+		</div> -->
 	</main>
-	<footer>
-	</footer>
 </body>
 </html>
