add inner conttainer to production page

--- a/pages/production.html
+++ b/pages/production.html
@@ -19,36 +19,37 @@
 		</div>
 	</header>
 	<main>
-		<div class="float-right">
-			<div class="production-videos">
-				<div class="production-videos__video production-videos__video--full-width"></div>
-				<div class="production-videos__video production-videos__video--half-width"></div>
-				<div class="production-videos__video production-videos__video--half-width"></div>
+		<div class="inner-container">
+			<div class="copy copy--light">
+				<h1>Doing</h1>
+				<p>We will assist you in the development of strategic social media content and Facebook apps all the way through to video production for YouTube. TAG The Agency has the in-house skills, technology and ability to deliver the very best solutions for your audience.</p>
 			</div>
-		</div>
-		<div class="copy copy--light">
-			<h1>Doing</h1>
-			<p>We will assist you in the development of strategic social media content and Facebook apps all the way through to video production for YouTube. TAG The Agency has the in-house skills, technology and ability to deliver the very best solutions for your audience.</p>
-		</div>
-		<div class="icons icons--light">
-			<div class="icons__icon">
-				<div class="icons__image icons__image"></div>
-				<div class="icons__text">Fb Apps</div>
+			<div class="icons icons--light">
+				<div class="icons__icon">
+					<div class="icons__image icons__image"></div>
+					<div class="icons__text">Fb Apps</div>
+				</div>
+				<div class="icons__icon">
+					<div class="icons__image icons__image"></div>
+					<div class="icons__text">Apps</div>
+				</div>
+				<div class="icons__icon">
+					<div class="icons__image icons__image"></div>
+					<div class="icons__text">Ads</div>
+				</div>
+				<div class="icons__icon">
+					<div class="icons__image icons__image--home icons__image--home--light"></div>
+					<div class="icons__text">Home</div>
+				</div>
 			</div>
-			<div class="icons__icon">
-				<div class="icons__image icons__image"></div>
-				<div class="icons__text">Apps</div>
+			<div class="media">
+				<div class="production-videos">
+					<div class="production-videos__video production-videos__video--full-width"></div>
+					<div class="production-videos__video production-videos__video--half-width"></div>
+					<div class="production-videos__video production-videos__video--half-width"></div>
+				</div>
 			</div>
-			<div class="icons__icon">
-				<div class="icons__image icons__image"></div>
-				<div class="icons__text">Ads</div>
-			</div>
-			<div class="icons__icon">
-				<div class="icons__image icons__image--home icons__image--home--light"></div>
-				<div class="icons__text">Home</div>
-			</div>
-		</div>
+		</div>	
 	</main>
-	<footer></footer>
 </body>
 </html>
