make cmyk crosses on home page responsive

--- a/pages/home.html
+++ b/pages/home.html
@@ -19,29 +19,30 @@
 		</div>
 	</header>
 	<main>
-		<div class="cmyk-crosses">
-			<div class="cmyk-crosses__wrapper">
-				<div class="cmyk-crosses__item">
-					<div class="cmyk-crosses__image cmyk-crosses__image--blue"></div>
-					<div class="cmyk-crosses__text--blue">Doing</div>
+		<div class="inner-container">		
+			<div class="cmyk-crosses">
+				<div class="cmyk-crosses__wrapper">
+					<div class="cmyk-crosses__item">
+						<div class="cmyk-crosses__image cmyk-crosses__image--blue"></div>
+						<div class="cmyk-crosses__text--blue">Doing</div>
+					</div>
+					<div class="cmyk-crosses__item">
+						<div class="cmyk-crosses__image cmyk-crosses__image--pink"></div>
+						<div class="cmyk-crosses__text--pink">VR Studio</div>
+					</div>
+					<div class="cmyk-crosses__item">
+						<div class="cmyk-crosses__image cmyk-crosses__image--yellow"></div>
+						<div class="cmyk-crosses__text--yellow">Thinking</div>
+					</div>
+					<div class="cmyk-crosses__item">
+						<div class="cmyk-crosses__image cmyk-crosses__image--white"></div>
+						<div class="cmyk-crosses__text--white">Done</div>
+					</div>
+					<div class="cmyk-crosses__item">
+						<div class="cmyk-crosses__image cmyk-crosses__image--black"></div>
+						<div class="cmyk-crosses__text--black">Influencers</div>
+					</div>
 				</div>
-				<div class="cmyk-crosses__item">
-					<div class="cmyk-crosses__image cmyk-crosses__image--pink"></div>
-					<div class="cmyk-crosses__text--pink">VR Studio</div>
-				</div>
-				<div class="cmyk-crosses__item">
-					<div class="cmyk-crosses__image cmyk-crosses__image--yellow"></div>
-					<div class="cmyk-crosses__text--yellow">Thinking</div>
-				</div>
-				<div class="cmyk-crosses__item">
-					<div class="cmyk-crosses__image cmyk-crosses__image--white"></div>
-					<div class="cmyk-crosses__text--white">Done</div>
-				</div>
-				<div class="cmyk-crosses__item">
-					<div class="cmyk-crosses__image cmyk-crosses__image--black"></div>
-					<div class="cmyk-crosses__text--black">Influencers</div>
-				</div>
-
 			</div>
 		</div>
 	</main>
