--- a/pages/production.html
+++ b/pages/production.html
@@ -43,10 +43,10 @@
 				</div>
 			</div>
 			<div class="media">
-				<div class="production-videos">
-					<div class="production-videos__video production-videos__video--full-width"></div>
-					<div class="production-videos__video production-videos__video--half-width"></div>
-					<div class="production-videos__video production-videos__video--half-width"></div>
+				<div class="videos">
+					<div class="videos__video videos__video--full-width"></div>
+					<div class="videos__video videos__video--half-width"></div>
+					<div class="videos__video videos__video--half-width"></div>
 				</div>
 			</div>
 		</div>	
