--- a/pages/production.html
+++ b/pages/production.html
@@ -50,5 +50,9 @@
 		</div>
 	</main>
 	<footer></footer>
+	<script src="..src/client/public/bundle.js" type="text/javascript"></script>
+	<script src="../js/underscore.js"></script>
+	<script src="../js/backbone.js"></script>
+<!-- 	// <script src="../js/routing.js"></script> -->
 </body>
 </html>
