--- a/pages/vr.html
+++ b/pages/vr.html
@@ -11,7 +11,7 @@
     <header>
       <div class="nav-top nav-top">
         <ul class="nav-top__menu">
-          <li class="nav-top__menu-item">Who</li>
+          <li class="nav-top__menu-item"><a href="production.html">Who</a></li>
           <li class="nav-top__menu-item nav-top__menu-item--current">What</li>
           <li class="nav-top__menu-item">How</li>
           <li class="nav-top__menu-item">Store</li>
@@ -50,7 +50,11 @@
           </div>
         </div>
       </div>
+      <a href="production.html">Who</a>
     </main>
-    <script src="../public/bundle.js" type="text/javascript"></script>
+    <script src="..src/client/public/bundle.js" type="text/javascript"></script>
+    <script src="../js/underscore.js"></script>
+    <script src="../js/backbone.js"></script>
+    <script src="../js/routing.js"></script>
   </body>
   </html>
