add burger menu

--- a/pages/home.html
+++ b/pages/home.html
@@ -16,6 +16,12 @@
 				<li class="nav-top__menu-item">Contact Us</li>
 			</ul>
 			<div class="nav-top__logo nav-top__logo--light"></div>
+			<div class="nav-top__burger-icon">
+				<span></span>
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
 		</div>
 	</header>
 	<main>
