--- a/pages/production.html
+++ b/pages/production.html
@@ -3,8 +3,9 @@
 <head>
 	<title>Tag</title>
 	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
+	<!-- // <script src="../js/bundle.js" type="text/javascript"></script> -->
 	<script src="../js/angular.min.js" type="text/javascript"></script>
-  	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+ 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
   	<script src="../js/routes.js" type="text/javascript"></script>
   	<script type="text/javascript">
   	if (window.performance) {
@@ -65,9 +66,5 @@
 			</div>
 		</div>	
 	</main>
-	<!-- <script src="../js/bundle.js" type="text/javascript"></script> -->
-<!-- 	// <script src="../js/underscore.js" type="text/javascript"></script>å
-	// <script src="../js/backbone.js" type="text/javascript"></script>
-	// <script src="../js/routing.js" type="text/javascript"></script> -->
 </body>
 </html>
