--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Tag</title>
 	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
 	<script src="scripts/script.js"></script>
 </head>
 <div class="background background--homepage"></div>
