--- a/index.html
+++ b/index.html
@@ -7,30 +7,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
 	<script src="scripts/script.js"></script>
 </head>
-<div class="background background--homepage"></div>
-<body ng-controller="mainController">
-	<header>
-		<div class="nav-top nav-top">
-			<ul class="nav-top__menu">
-				<li class="nav-top__menu-item">Who</li>
-				<li class="nav-top__menu-item nav-top__menu-item--current">What</li>
-				<li class="nav-top__menu-item">How</li>
-				<li class="nav-top__menu-item">Store</li>
-				<li class="nav-top__menu-item">Contact Us</li>
-			</ul>
-			<div class="nav-top__logo nav-top__logo--light"></div>
-			<div class="nav-top__burger-icon">
-				<span></span>
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-		</div>
-	</header>
-	<main>
-		<div ng-view></div>
-	</main>
-	<footer>
-	</footer>
-</body>
+<body>
+		<div ng-controller="mainController" ng-view></div>
 </html>
