--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Tag</title>
-	<link rel="stylesheet" type="text/css" href="../stylesheets/style.css">
+	<!-- <link rel="stylesheet" type="text/css" href="../stylesheets/style.css"> -->
 </head>
 <div class="background background--homepage"></div>
 <body>
@@ -44,7 +44,7 @@
 						<div class="cmyk-crosses__image cmyk-crosses__image--white"></div>
 						<div class="cmyk-crosses__text--white">Done</div>
 					</div>
-					<div class="cmyk-crosses__item">
+					<div class="cmyk-crosses__item" ng-click="go('/influencers')">
 						<div class="cmyk-crosses__image cmyk-crosses__image--black"></div>
 						<div class="cmyk-crosses__text--black">Influencers</div>
 					</div>
